[package]
name = "helper-functions-2"
version = "0.1.0"
authors = ["Tadas Vaitiekūnas, Vidmantas Bakštys, Olga Joana Šmitaitė"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
eth2_hashing = { path = "../utils/eth2_hashing"}
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v0.11.0" }
eth2_ssz = { path = "../utils/ssz" }
rand = "^0.5"

[dev-dependencies]
rustc-hex = "2.0.1"
